# vixen

./: Cargo.toml
res/: blocks.json
src/: camera.rs  chunk.rs  chunk_mesh.rs  file_util.rs  input.rs  inventory.rs  keyboard.rs  loader.rs  main.rs  player.rs  shaders.rs  terrain.rs  texture.rs
src/shaders/: frag_debug.glsl  vertex.glsl  vertex_debug.glsl
src/shaders/diffuse/: frag.glsl  vertex.glsl
src/support/: mod.rs
