[package]
name = "vixen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5"
glium = { version = "0.31.0", default-features = true }
image = "0.23"
imgui = "0.8.0"
imgui-glium-renderer = "0.8.0"
imgui-winit-support = "0.8.0"
ndarray = "0.15.4"
noise = "0.7.0"