[package]
name = "vixen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5"
glium = { version = "0.30.2", default-features = true }
image = "0.23"
imgui = "0.8.2"
imgui-glium-renderer = "0.8.2"
ndarray = "0.15.4"
noise = "0.7.0"
multiqueue = "0.3.2"
scoped_threadpool = "0.1.9"

[dependencies.imgui-winit-support]
version = "0.8.2"
features = ["winit-25"]
default-features = true