[package]
name = "vixen"
version = "0.1.0"
edition = "2021"

[dependencies]
clipboard = "0.5"
glium = { version = "0.30.2", default-features = true }
image = "0.23.14"
imgui = "0.8.2"
imgui-glium-renderer = "0.8.2"
ndarray = { version = "0.15.4", features = ["serde"] }
crossbeam-queue = "0.3.5"
crossbeam-channel = "0.5.4"
parry3d = "0.9.0"
nalgebra = "0.30.1"
miniz_oxide = "0.5.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
bincode = "1.3.3"
line_drawing = "1.0.0"
itertools-num = "0.1.3"
noise = "0.7.0"

[dependencies.imgui-winit-support]
version = "0.8.2"
features = ["winit-25"]
default-features = true

[profile.dev]
opt-level = 1